# vertexpr

./: .gitignore  CMakeLists.txt  README.md
assets/models/test/: scene.gltf
assets/shaders/: fragment.glsl  vertex.glsl
include/: camera.h  display.h  ebo.h  light.h  mesh.h  model.h  primitives.h  shader.h  texture.h  utils.h  vao.h  vbo.h
include/glad/: glad.h
shaders/: default.frag  default.vert  light.frag  light.vert
src/: camera.cpp  display.cpp  ebo.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  utils.cpp  vao.cpp  vbo.cpp
